--- a/ideas.textile
+++ b/ideas.textile
@@ -3,15 +3,24 @@ h2. Slide Ideas
 
 * Intro to D3 Force "api":https://github.com/mbostock/d3/wiki/Force-Layout
 ** multiple bubbles - "this demo":http://bl.ocks.org/1062383 has fun fly in
-*** code for force
-** gravity
-** charge
+*** source code for basic force
+*** source code for moving nodes
+** add more bubbles
+*** gravity
+*** charge
+** alpha
+*** simulated annealing
+
 ** 
 
 * Just Nodes
-** Bubble Chart - NYT budget
+** custom charge per node
+*** node by node
+*** Bubble Chart - NYT budget
+*** My version of bubble chart
+*** another bubble chart
 ** Collision Detection
-** Bubble Cloud
+*** Bubble Cloud
 ** Custom Nodes
 
 * Nodes & Edges
