--- a/ideas.textile
+++ b/ideas.textile
@@ -4,16 +4,13 @@ h2. TODO
 * pseudocode for quadtree
 * explain/understand quadtree. read code
 * more abuse the force images
-* convert size to 1024x768
-* change font size for code
-* break up some code to multiple slides
 * add funny pics to slides
 * implement growing bubble
 * implement multiple force on bubble chart
 * code for bubbles as images
 * add clustered forces
-* add grid layout
-* add force labels
+* code for grid layout
+* code for force labels
 * figure out ending
 * implement ending
 * add sources slides
