big finish is now little finish

--- a/overview.textile
+++ b/overview.textile
@@ -19,8 +19,6 @@ The concept of alpha comes up here too. We can use it to determine how much to m
 
 The collision code is done in a brute force manner - each node is compared to every other node in the layout. This is fine for small numbers of nodes, but can slow down significantly when you have a lot of nodes. The Quadtree data structure can be used to speed up this collision code - and any other calculation that requires comparing nodes that are physically close to one another.
 
-So far all our examples of the force layout have been just bubbles. Circles. But, remember, D3 layouts don't restrict to a particular visual representation. So, we can use squares, images (faces), or even states. D3 force layout don't care. 
-
 Ok, we've got nodes. Let's add some links. Finally! Links, or edges, in a force layout constrain the nodes. They have a source and destination and can have other data associated with them too. 
 
 Link Distance and Link Strength affect how links work. And these attributes, like the 'charge' attribute, can be data-driven. In fact that is what I did with visualizing the racial divide. Here, each census tract is connected to neighbors via invisible links. The link length is now determined by the difference in ratios of white/black populations between tracts. The idea here is that empty space between sharply dividing neighborhoods could tell us something about how these communities are affected. 
@@ -29,12 +27,25 @@ Another fun thing to do with links is remove them! This congressional voting vis
 
 Ok, lets take the concept of the 'custom force' applied to each node and see how it can be used to create whole new layouts using the force layout mechanics. 
 
-First up, my circle-based layout examples. Talk about using sine/cosine for radial placement. Then look at the 'expanding center node' example - which kind of looks like a Kill Bill fight. 
+First up, my circle-based layout examples. Talk about using sine/cosine for radial placement. 
 
-Finally, we end with two experiments created by Moritz Stefaner. Both deal with doubling up on force layout components. The first uses two positions for nodes. One for the visual and one to push the visual to the right location. The second uses two separate force layouts. One for nodes one for labels. 
- 
+Then look at the 'expanding center node' example - which kind of looks like a Kill Bill fight. 
 
- that's it!
+Moritz Stefaner has some interesting adaptations of the force layout one is the use of an underlying grid that regulates the visual position of the nodes. There are actually two 'nodes' here - one is the one we see - which snaps to the grid. The other is used to position the visual node - and it is affected by neighboring node forces. I think it would be fun to explore this grid layout more. Think automatically generated transit maps. Similar to what Fathom has recently done with the MBTA locations.
+
+We end with a rapid fire look at a few more examples of using the parameters for the force layout in interesting ways - from whimsical to more rigorous:
+
+* is Obama president - uses custom force to simulate negative gravity - so balloons float. Also uses collision detection and expanding charge on hover. 
+* Electro by Ziggy Jonsson uses the custom force idea - but lets the user specify the locations of the node foci. Messy, but interesting
+* this idea is taken to a more production level with Disqus's new 'Gravity' screen - which groups topics of similar interest using the same mechanism, adding real-time updates. 
+* shape of my library by Sarah Groff-Palermo uses collision and custom forces to provide quantitative visuals about categorical data.
+* this idea is taken to the extreme with 'Visual Sedimentation' which tries to use the idea of particles in suspension to settle to visualize streaming data.
+
+So hopefully we now have a greater understanding of the magic behind the force. 
+
+So get out there and abuse the force today!
+
+that's it!
 
 h2. TODO
 
